form now auto clears

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 	      //generate new tabs
 	      var link1 = "http://spfasterapp/FASTER/Domains/Maintenance/WorkOrder/WorkOrderMaster.aspx?workOrderID=" + workOrder1;
 	      window.open(link1, '_blank');
+	      //clear form
+	      $("#work-order1").val("");
 	    });
 		
 
